--- a/www/html/login.html
+++ b/www/html/login.html
@@ -35,10 +35,10 @@
 			<a data-role="button" data-transition="slideup" href="wall.html" rel="external">Ir a Muro</a>
 			</div>
 
-			<!-- 	
+			 	
 			<div data-role="content" class = "content" >
 			<a data-role="button" data-transition="slideup" href="myfishinglogs.html" rel="external">Mis Bitácoras</a>	
-			</div> -->
+			</div> 
 
 			<div data-role="content" class = "content" >
 			<a data-role="button" data-transition="slideup" href="fishinglog.html" rel="external">Registrar Bitácora</a>
